--- a/TestNotebook.ipynb
+++ b/TestNotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "image = cv2.imread('images/phone.jpg')"
+   ]
   }
  ],
  "metadata": {
