--- a/HaarCascade.ipynb
+++ b/HaarCascade.ipynb
@@ -112,7 +112,8 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
