--- a/Haar.ipynb
+++ b/Haar.ipynb
@@ -170,6 +170,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def detect_faces(f_cascade, colored_img, scaleFactor = 1.1):\n",
+    "    #just making a copy of image passed, so that passed image is not changed\n",
+    "    img_copy = colored_img.copy()\n",
+    "    \n",
+    "    #convert the test image to gray image as opencv face detector expects gray images\n",
+    "    gray = cv2.cvtColor(img_copy, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    #let's detect multiscale (some images may be closer to camera than others) images\n",
+    "    faces = f_cascade.detectMultiScale(gray, scaleFactor=scaleFactor, minNeighbors=5);\n",
+    "    \n",
+    "    #go over list of faces and draw them as rectangles on original colored img\n",
+    "    for (x, y, w, h) in faces:\n",
+    "        cv2.rectangle(img_copy, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
+    "        \n",
+    "    return img_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'copy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-29-3ad699c05bc5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#call our function to detect faces\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mfaces_detected_img\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdetect_faces\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhaar_face_cascade\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m#conver image to RGB and show image\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-19-ff8ff6e8516d>\u001b[0m in \u001b[0;36mdetect_faces\u001b[1;34m(f_cascade, colored_img, scaleFactor)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mdetect_faces\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf_cascade\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolored_img\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscaleFactor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1.1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;31m#just making a copy of image passed, so that passed image is not changed\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mimg_copy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcolored_img\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m#convert the test image to gray image as opencv face detector expects gray images\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'copy'"
+     ]
+    }
+   ],
+   "source": [
+    "#load another image\n",
+    "test2 = cv2.imread('.\\images\\test1.jpg')\n",
+    "\n",
+    "#call our function to detect faces\n",
+    "faces_detected_img = detect_faces(haar_face_cascade, test2)\n",
+    "\n",
+    "#conver image to RGB and show image\n",
+    "plt.imshow(convertToRGB(faces_detected_img))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
